/*
 *              Copyright (c) 2016-2019, Nuralogix Corp.
 *                      All Rights reserved
 *
 *      THIS SOFTWARE IS LICENSED BY AND IS THE CONFIDENTIAL AND
 *      PROPRIETARY PROPERTY OF NURALOGIX CORP. IT IS
 *      PROTECTED UNDER THE COPYRIGHT LAWS OF THE USA, CANADA
 *      AND OTHER FOREIGN COUNTRIES. THIS SOFTWARE OR ANY
 *      PART THEREOF, SHALL NOT, WITHOUT THE PRIOR WRITTEN CONSENT
 *      OF NURALOGIX CORP, BE USED, COPIED, DISCLOSED,
 *      DECOMPILED, DISASSEMBLED, MODIFIED OR OTHERWISE TRANSFERRED
 *      EXCEPT IN ACCORDANCE WITH THE TERMS AND CONDITIONS OF A
 *      NURALOGIX CORP SOFTWARE LICENSE AGREEMENT.
 */
syntax = "proto3";

import "google/api/annotations.proto";

option cc_enable_arenas = true;
option java_package = "ai.nuralogix.dfx.organizations.v1";
option java_outer_classname = "Organizations";
option go_package = "bitbucket.org/nuralogix/dfx-protobuffs-go/dfx/organizations/v1;organizations";
option csharp_namespace = "Nuralogix.Dfx.Organizations.V1";

package dfx.organizations.v1;
 
service API {
  rpc Create (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/organizations"
      body: "*"
    };
  }
  rpc Remove (RemoveRequest) returns (RemoveResponse) {
    option (google.api.http) = {
      delete: "/api/v1/organizations/{id}"
    };
  }
  rpc Update (UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/api/v1/organizations"
      body: "*"
    };
  }
  rpc List (ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/api/v1/organizations/list"
    };
  }   
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {
    option (google.api.http) = {
      get: "/api/v1/organizations"
    };
  }
  rpc RetrieveMultiple (RetrieveMultipleRequest) returns (RetrieveMultipleResponse) {
    option (google.api.http) = {
      post: "/api/v1/organizations/retrieve-multiple"
      body: "*"
    };
  }
}

enum Status {
  UNKNOWN_ORGANIZATION_STATUS = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  DELETED = 3;
}

// Create
message CreateRequest {
  Organization organization = 1;
}
message CreateResponse {
  string id = 1;
}

// Remove
message RemoveRequest {
  string id = 1; // id must be provided to avoid removing caller's org inadvertently 
}
message RemoveResponse {}

// Update
message UpdateRequest {
  Organization organization = 1;
}
message UpdateResponse {}

// List
message ListRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}
message ListResponse {
  message Organization {
    string id = 1;
    string name = 2;
    string identifier = 3;
    Status status = 4;
  }
  uint32 total = 1;
  repeated Organization organizations = 2;
}

// Retrieve
message RetrieveRequest {}
message RetrieveResponse {
  Organization organization = 1;
}

// RetrieveMultiple
message RetrieveMultipleRequest {
  repeated string ids = 1;
}
message RetrieveMultipleResponse {
  // map[organization_id] -> Organization object
  map<string, Organization> organizations = 1;
}

message Organization {
  string name = 1;
  string identifier = 2;
  string public_key = 3;
  Status status = 4;
  bytes logo = 5;
}
